// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`token multiple elements 1`] = `
"import $r$ from \\"../mxt-rt\\";
const { t01 } = $r$({
    components: { t01: \\"p4\\" },
    parts: { p4: $pf$ => {
            return {
                template: \\"\\\\n    <div id=\\\\\\"tagid_4\\\\\\">Hello MXT!</div>\\\\n    <div id=\\\\\\"tagid_5\\\\\\">Hello MXT too!</div>\\\\n  \\",
                attachTo: [{
                        id: \\"tagid_4\\",
                        attrs: $dc$ => {
                            const { color } = $dc$.$data;
                            return { style: \`color: \${color};\` };
                        }
                    }, {
                        id: \\"tagid_5\\",
                        attrs: $dc$ => {
                            const { title } = $dc$.$data;
                            return { title: \`\${title}\` };
                        }
                    }],
                attachTo: [{
                        id: \\"tagid_4\\",
                        attrs: $dc$ => {
                            const { color } = $dc$.$data;
                            return { style: \`color: \${color};\` };
                        }
                    }, {
                        id: \\"tagid_5\\",
                        attrs: $dc$ => {
                            const { title } = $dc$.$data;
                            return { title: \`\${title}\` };
                        }
                    }]
            };
        } }
});
export { t01 };
export default t01;
"
`;

exports[`token single element, attribute, token 1`] = `
"import $r$ from \\"../mxt-rt\\";
const { t01 } = $r$({
    components: { t01: \\"p1\\" },
    parts: { p1: $pf$ => {
            return {
                template: \\"\\\\n    <div id=\\\\\\"tagid_1\\\\\\">Hello MXT!</div>\\\\n  \\",
                attachTo: [{
                        id: \\"tagid_1\\",
                        originalId: \\"old\\",
                        attrs: $dc$ => {
                            const { color } = $dc$.$data;
                            return { style: \`color: \${color}\` };
                        }
                    }]
            };
        } }
});
export { t01 };
export default t01;
"
`;

exports[`token single element, multiple attributes,tokens 1`] = `
"import $r$ from \\"../mxt-rt\\";
const { t01 } = $r$({
    components: { t01: \\"p2\\" },
    parts: { p2: $pf$ => {
            return {
                template: \\"\\\\n    <div id=\\\\\\"tagid_2\\\\\\">Hello MXT!</div>\\\\n  \\",
                attachTo: [{
                        id: \\"tagid_2\\",
                        originalId: \\"old\\",
                        attrs: $dc$ => {
                            const { color, title } = $dc$.$data;
                            return {
                                style: \`color: \${color}\`,
                                title: \`\${title}\`
                            };
                        }
                    }]
            };
        } }
});
export { t01 };
export default t01;
"
`;

exports[`token single element, multiple tokens per attribute 1`] = `
"import $r$ from \\"../mxt-rt\\";
const { t01 } = $r$({
    components: { t01: \\"p3\\" },
    parts: { p3: $pf$ => {
            return {
                template: \\"\\\\n    <div id=\\\\\\"tagid_3\\\\\\">Hello MXT!</div>\\\\n  \\",
                attachTo: [{
                        id: \\"tagid_3\\",
                        originalId: \\"old\\",
                        attrs: $dc$ => {
                            const { color, margin } = $dc$.$data;
                            return { style: \`color: \${color}; margin: \${margin}\` };
                        }
                    }]
            };
        } }
});
export { t01 };
export default t01;
"
`;
